--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
+    "lodash.debounce": "^4.0.8",
     "qs": "^6.7.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
