--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.0",
     "lodash.debounce": "^4.0.8",
-    "qs": "^6.9.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "qs": "^6.9.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.0",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
@@ -29,9 +29,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "react-router": "^5.1.2",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "react-router": "^5.2.0",
     "standard": "^12.0.1"
   },
   "standard": {
